force-app/main/default/objects/EYI_Brokerage_Invoice__c/EYI_Brokerage_Invoice__c.object-meta.xml
<CustomObject>
    <label>Brokerage Invoice</label>
    <nameField>
        <displayFormat>BINV-{0000}</displayFormat>
        <label>Brokerage Invoice No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brokerage Invoice</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>