force-app/main/default/objects/EYI_Brokerage_Invoice__c/fields/EYI_Approval_Status_Invoice__c.field-meta.xml
<CustomField>
    <fullName>EYI_Approval_Status_Invoice__c</fullName>
    <label>Approval Status (Invoice)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>