force-app/main/default/objects/EYI_Brokerage_Invoice__c/fields/EYI_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>EYI_Brokerage__c</fullName>
    <label>Brokerage</label>
    <referenceTo>EYI_Brokerage__c</referenceTo>
    <relationshipLabel>Brokerage Invoice</relationshipLabel>
    <relationshipName>Brokerage_Invoice</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>