force-app/main/default/objects/EYI_Brokerage_Invoice__c/fields/EYI_Brokerage_In_Rs__c.field-meta.xml
<CustomField>
    <fullName>EYI_Brokerage_In_Rs__c</fullName>
    <label>Brokerage (In Rs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>