force-app/main/default/objects/EYI_Brokerage_Invoice__c/fields/EYI_Brokerage_percentage__c.field-meta.xml
<CustomField>
    <fullName>EYI_Brokerage_percentage__c</fullName>
    <label>Brokerage %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>