force-app/main/default/objects/EYI_Brokerage_Invoice__c/fields/EYI_CGST__c.field-meta.xml
<CustomField>
    <fullName>EYI_CGST__c</fullName>
    <label>CGST</label>
    <length>255</length>
    <type>Text</type>
</CustomField>