force-app/main/default/objects/EYI_Brokerage_Invoice__c/fields/EYI_ICST__c.field-meta.xml
<CustomField>
    <fullName>EYI_ICST__c</fullName>
    <label>ICST</label>
    <length>25</length>
    <type>Text</type>
</CustomField>