force-app/main/default/objects/EYI_Brokerage_Invoice__c/fields/EYI_If_GST_is_Applicable__c.field-meta.xml
<CustomField>
    <fullName>EYI_If_GST_is_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>If GST is Applicable?</label>
    <type>Checkbox</type>
</CustomField>