force-app/main/default/objects/EYI_Brokerage_Invoice__c/fields/EYI_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Invoice_Amount__c</fullName>
    <label>Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>