force-app/main/default/objects/EYI_Brokerage_Invoice__c/fields/EYI_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Invoice_Date__c</fullName>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>