force-app/main/default/objects/EYI_Brokerage_Invoice__c/fields/EYI_Invoice_Stage__c.field-meta.xml
<CustomField>
    <fullName>EYI_Invoice_Stage__c</fullName>
    <label>Invoice Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Booking (Token amount received)</fullName>
            </value>
            <value>
                <fullName>Booking (9.9 Received but registration pending)</fullName>
            </value>
            <value>
                <fullName>Booking (Registration Done)</fullName>
            </value>
            <value>
                <fullName>Eligible to raise Invoice</fullName>
            </value>
            <value>
                <fullName>Invoice Raised</fullName>
            </value>
            <value>
                <fullName>Invoice Received</fullName>
            </value>
            <value>
                <fullName>Invoice Accepted (Sales)</fullName>
            </value>
            <value>
                <fullName>Invoice Accepted (Finance)</fullName>
            </value>
            <value>
                <fullName>Payout Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>