force-app/main/default/objects/EYI_Brokerage_Invoice__c/fields/EYI_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>EYI_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Brokerage Invoice</relationshipLabel>
    <relationshipName>Brokerage_Invoice</relationshipName>
    <type>Lookup</type>
</CustomField>