force-app/main/default/objects/EYI_Brokerage_Invoice__c/fields/EYI_Project__c.field-meta.xml
<CustomField>
    <fullName>EYI_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>EYI_Project__c</referenceTo>
    <relationshipLabel>Brokerage Invoice</relationshipLabel>
    <relationshipName>Brokerage_Invoice</relationshipName>
    <type>Lookup</type>
</CustomField>