force-app/main/default/objects/EYI_Brokerage_Invoice__c/fields/EYI_SAP_Broker_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Broker_Code__c</fullName>
    <label>SAP Broker Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>