force-app/main/default/objects/EYI_Brokerage_Invoice__c/fields/EYI_SAP_Clearing_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Clearing_Number__c</fullName>
    <label>SAP Clearing Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>