force-app/main/default/objects/EYI_Brokerage_Invoice__c/fields/EYI_SAP_Document_No__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Document_No__c</fullName>
    <label>SAP Document No</label>
    <length>25</length>
    <type>Text</type>
</CustomField>