force-app/main/default/objects/EYI_Brokerage_Invoice__c/fields/EYI_SAP_Posting_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Posting_Date__c</fullName>
    <label>SAP Posting Date</label>
    <type>Date</type>
</CustomField>