force-app/main/default/objects/EYI_Brokerage_Invoice__c/fields/EYI_SGST__c.field-meta.xml
<CustomField>
    <fullName>EYI_SGST__c</fullName>
    <label>SGST</label>
    <length>25</length>
    <type>Text</type>
</CustomField>