force-app/main/default/objects/EYI_Brokerage_Invoice__c/fields/EYI_SO_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_SO_Number__c</fullName>
    <label>SO Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>