force-app/main/default/objects/EYI_Brokerage_Invoice__c/fields/EYI_Total_Agreement_Value__c.field-meta.xml
<CustomField>
    <fullName>EYI_Total_Agreement_Value__c</fullName>
    <label>Total Agreement Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>