force-app/main/default/objects/EYI_Brokerage_Invoice__c/fields/EYI_Total_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>EYI_Total_Amount_Paid__c</fullName>
    <label>Total Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>